// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when the data is being fetched should show loading screen 1`] = `
<div
  className="App"
>
  <Loading />
  <SearchBar
    onQueryChange={[Function]}
  />
  
</div>
`;

exports[`App when the search query is set should show search input and grid with fetched characters 1`] = `
<div
  className="App"
>
  <SearchBar
    onQueryChange={[Function]}
  />
  <CharactersGrid
    characters={
      Array [
        Object {
          "id": 123,
          "image": "some-image.jpg",
          "isBookmark": false,
          "name": "Deadpool",
        },
      ]
    }
    onToggleBookmark={[Function]}
  />
  <Pagination
    metadata={
      Object {
        "count": 0,
        "offset": 0,
        "total": 0,
      }
    }
    onPageChange={[Function]}
  />
</div>
`;

exports[`App when the there is no search query and bookmarks exist should show empty search input and grid with bookmarks 1`] = `
<div
  className="App"
>
  <SearchBar
    onQueryChange={[Function]}
  />
  <CharactersGrid
    characters={
      Array [
        Object {
          "id": 123,
          "image": "some-image.jpg",
          "isBookmark": true,
          "name": "Deadpool",
        },
      ]
    }
    onToggleBookmark={[Function]}
  />
  
</div>
`;

exports[`App when the there is no search query and there is no bookmarks should show empty search input and empty grid 1`] = `
<div
  className="App"
>
  <SearchBar
    onQueryChange={[Function]}
  />
  <CharactersGrid
    characters={Array []}
    onToggleBookmark={[Function]}
  />
  
</div>
`;
